<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginBottom="10dp"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent">

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:contentDescription="@string/weather_image"
            android:src="@drawable/sunny" />

        <TextView
            android:id="@+id/weather_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/weather_title"
            android:textSize="18sp"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weather_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/weather_value"
            android:textColor="#FF9800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/temperature_title"
            android:textSize="18sp"
            android:textColor="#03A9F4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/temperature_value"
            android:textColor="#FF9800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/humidity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/humidity_title"
            android:textColor="#03A9F4"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/humidity_value"
            android:textColor="#FF9800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wind_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/wind_title"
            android:textColor="#03A9F4"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/wind_value"
            android:textColor="#FF9800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/date_title"
            android:textColor="#03A9F4"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/date_value"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textlines"
            android:text="" />

    </LinearLayout>

</androidx.cardview.widget.CardView>